2009-05-30  Bertrand Lorentz <bertrand.lorentz@gmail.com>

	* configure.ac: Rename configure option to --user-extension

2009-05-30  Bertrand Lorentz <bertrand.lorentz@gmail.com>

	* build/m4/shamrock/mono.m4: Fix typo

2009-05-30  Bertrand Lorentz <bertrand.lorentz@gmail.com>

	* alarm.mdp, alarm.mds, Banshee.AlarmClock.sln,
	  Banshee.AlarmClock.csproj: Convert solution and project
	  files to the VisualStudio format. it's now the default for
	  MonoDevelop 2.0.

2009-01-04  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* configure.ac: Remove useless macro.

2008-11-25  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* build/m4/shamrock/programs.m4: Do actually bail if a program is not
	  found.

2008-11-08  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	Version 0.4.2 released. 

2008-11-08  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* src/Alarm.cs: Do not start playing if the alarm is not enabled.
	* src/AlarmClockService.cs: Some more code cleanup.

2008-11-08  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* src/GConfSchemas.cs, src/Makefile.am, src/ConfigurationSchema.cs,
	  src/AlarmClockService.cs, alarm.mdp: Rename GConfSchemas to
	  ConfigurationSchema.

2008-11-08  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* build/gconf-schema-rules, configure.ac: Make the GConf dependency
	  optionnal.

2008-11-08  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* configure.ac: Update dependencies and bump version.
	* autogen.sh: Remove useless calls to glib-gettextize.

2008-11-08  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* src/Alarm.cs, src/SleepTimerConfigDialog.cs, src/AssemblyInfo.cs.in,
	  src/AlarmConfigDialog.cs, src/VolumeFade.cs,
	  src/ConfigurationDialog.cs, src/AlarmClockService.cs: Improve code
	  formatting and some other cosmetic stuff.

2008-05-11  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* configure.ac: Fix banshee version dependency.

2008-05-08  Bertrand Lorentz <bertrand.lorentz@gmail.com> 
