@@ -1,5 +1,13 @@
 2009-05-30  Bertrand Lorentz <bertrand.lorentz@gmail.com>
 
+	* COPYING, src/Alarm.cs, src/VolumeFade.cs,
+	  src/AlarmConfigDialog.cs, src/AlarmClockService.cs,
+	  src/ConfigurationSchema.cs, src/ConfigurationDialog.cs,
+	  src/SleepTimerConfigDialog.cs: Add copyright headers to all
+	  source files and update copyright information.
+
+2009-05-30  Bertrand Lorentz <bertrand.lorentz@gmail.com>
+
 	* configure.ac: Rename configure option to --user-extension
 
 2009-05-30  Bertrand Lorentz <bertrand.lorentz@gmail.com>
